<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_view_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!-- Left Side Views -->

    <TextView
        android:id="@+id/textView_base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"

        android:text="@string/base_amount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/percentage_DEF"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_base"
        app:layout_constraintTop_toBottomOf="@+id/textView_base" />

    <TextView
        android:id="@+id/textView_totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_base"
        app:layout_constraintTop_toBottomOf="@+id/textView_tipText" />

    <TextView
        android:id="@+id/textView_tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_amount"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_base"
        app:layout_constraintTop_toBottomOf="@+id/textView_percent" />
    <!-- Right Side Views -->

    <EditText
        android:id="@+id/editText_baseAmount"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="8"
        android:inputType="numberDecimal"
        android:labelFor="@id/editText_baseAmount"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView_base" />

    <SeekBar
        android:id="@+id/seekBar_tipPercent"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/textView_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_percent"
        app:layout_constraintTop_toTopOf="@+id/textView_percent" />

    <TextView
        android:id="@+id/textView_tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_tipText"
        app:layout_constraintStart_toEndOf="@+id/textView_tipText"
        tools:text="3.14" />

    <TextView
        android:id="@+id/textView_totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_totalText"
        app:layout_constraintStart_toEndOf="@+id/textView_totalText"
        tools:text="42" />

    <TextView
        android:id="@+id/textView_Percentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/percent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_percent"
        app:layout_constraintEnd_toStartOf="@+id/textView_percent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="@+id/textView_base"
        app:layout_constraintTop_toTopOf="@+id/textView_percent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView_Footer"
        android:autoLink="web"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/with_by_www_abunayla_com"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:text="@string/emoji"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_Footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_totalText" />

</androidx.constraintlayout.widget.ConstraintLayout>